# lora-context-distillation

./: .gitignore  SECURITY_ROTATED.md  pyproject.toml  qwen_a3b_mini_swebench_colab.ipynb
conf/: config.yaml  mini_qwen_thinking.yaml  mk_apply_template.yml
env/: environment.yml
logs/: qwen3-loop-30815813.err  qwen3-loop-30815813.out  qwen3-loop-30815878.err  qwen3-loop-30815981.err  qwen3-loop-30815981.out  qwen3-loop-30854928.err  qwen3-loop-30855093.err  qwen3-loop-30855093.out  qwen3-loop-30855108.err  qwen3-loop-30855108.out  qwen3-loop-30914520.err  qwen3-loop-30914520.out  qwen3-loop-30915431.out  qwen3-loop-30949124.err  qwen3-loop-30949234.err  qwen3-loop-30949290.err  qwen3-loop-30949316.err  qwen3-loop-30949316.out  qwen3-loop-30949385.err  qwen3-loop-30949518.err  qwen3-loop-30949518.out  qwen3-loop-30949562.err  qwen3-loop-30949601.err  qwen3-loop-30949625.err  qwen3-loop-30949664.err  qwen3-loop-31008140.err  qwen3-loop-31008189.err  qwen3-loop-31008202.err  qwen3-loop-31008227.err  qwen3-loop-31008251.err  qwen3-loop-31008256.err  qwen3-loop-31019764.err  qwen3-loop-31019848.err  qwen3-loop-31019848.out  qwen3-loop-31020525.err  qwen3-loop-31020956.err  qwen3-loop-31021137.err  qwen3-loop-31021528.err  qwen3-loop-31021780.err  qwen3-loop-31022107.err  (+7 more)
pipeline/: apply_diff_linear.py  hf_sync.py  snap_and_sync.py  strip_thinking.py  swe_runner.py  train_unsloth_lora.py  util.py
slurm/: full_loop_2gpu.sbatch
