# pyproject.toml
[project]
name = "qwen3-loop"
version = "0.1.0"
requires-python = ">=3.10,<=3.11"
dependencies = [
    "torch==2.5.1+cu121",
    "torchvision==0.20.1+cu121",
    "vllm==0.6.4",
    "xformers==0.0.28.post3",
    "transformers",
    "accelerate>=1.0.1",
    "datasets",
    "huggingface_hub",
    "safetensors>=0.4.5",
    "trl",
    "unsloth==2025.11.3",
    "mergekit==0.1.4",
    "swebench==0.4.3",
    "mini-swe-agent==1.14.4",
    "typer==0.12.5",
    "requests",
    "tqdm>=4.66.5",
    "jsonlines==4.0.0",
    "pyyaml==6.0.2",
    "psutil==6.0.0",
    'uvloop==0.19.0; sys_platform == "linux"',
]

[[tool.uv.index]]
name = 'pypi'
url = 'https://pypi.org/simple'

[[tool.uv.index]]
name = 'pytorch-cu121'
url = "https://download.pytorch.org/whl/cu121"

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }
