# pyproject.toml
[project]
name = "qwen3-loop"
version = "0.1.0"
requires-python = ">=3.10,<=3.11"
dependencies = [
    "xformers",
    "transformers",
    "accelerate",
    "datasets",
    "huggingface_hub",
    "safetensors",
    "trl",
    "unsloth==2025.11.3",
    "mergekit==0.1.4",
    "swebench==0.4.3",
    "mini-swe-agent==1.14.4",
    "typer",
    "requests",
    "tqdm>=4.66.5",
    "jsonlines",
    "pyyaml",
    "psutil",
    'uvloop==0.19.0; sys_platform == "linux"',
    "vllm>=0.10.0",
]

[tool.uv]
override-dependencies = [
    "pydantic==2.12.0",
]

[[tool.uv.index]]
name = 'pypi'
url = 'https://pypi.org/simple'

[[tool.uv.index]]
name = 'pytorch-cu129'
url = "https://download.pytorch.org/whl/cu129"

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }
